INCLUDES = $(all_includes)

noinst_LIBRARIES = libgui.a
libgui_a_SOURCES = comboboxproxy.cpp counteditem.cpp datewidget.cpp \
	tabcontrol.cpp kwidgetlister.cpp stringmapdialog.cpp listview.cpp \
	richtextlabel.cpp lineedit.cpp boolfieldwidget.cpp \
	choicefieldwidget.cpp linefieldwidget.cpp \
	numberfieldwidget.cpp parafieldwidget.cpp urlfieldwidget.cpp \
	tablefieldwidget.cpp imagefieldwidget.cpp datefieldwidget.cpp \
	imagewidget.cpp fieldwidget.cpp \
	ratingwidget.cpp ratingfieldwidget.cpp

libgui_a_METASOURCES = AUTO
KDE_OPTIONS = noautodist
EXTRA_DIST = comboboxproxy.h comboboxproxy.cpp \
counteditem.h counteditem.cpp \
datewidget.h datewidget.cpp \
kwidgetlister.h kwidgetlister.cpp \
listview.h listview.cpp \
richtextlabel.h richtextlabel.cpp \
stringmapdialog.h stringmapdialog.cpp \
tabcontrol.h tabcontrol.cpp \
lineedit.h lineedit.cpp \
boolfieldwidget.h boolfieldwidget.cpp \
choicefieldwidget.h choicefieldwidget.cpp \
datefieldwidget.h datefieldwidget.cpp \
imagefieldwidget.h imagefieldwidget.cpp \
linefieldwidget.h linefieldwidget.cpp \
numberfieldwidget.h numberfieldwidget.cpp \
parafieldwidget.h parafieldwidget.cpp \
tablefieldwidget.h tablefieldwidget.cpp \
urlfieldwidget.h urlfieldwidget.cpp \
ratingwidget.h ratingwidget.cpp \
imagewidget.h imagewidget.cpp \
fieldwidget.h fieldwidget.cpp \
ratingfieldwidget.h ratingfieldwidget.cpp

CLEANFILES = *~

