####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libnewstuff.a

## INCLUDES were found outside kdevelop specific part

libnewstuff_a_METASOURCES = AUTO

libnewstuff_a_SOURCES = manager.cpp dialog.cpp newscript.cpp providerloader.cpp

CLEANFILES = *~

EXTRA_DIST = \
manager.h manager.cpp \
dialog.h dialog.cpp \
newscript.h newscript.cpp \
providerloader.h providerloader.cpp

####### kdevelop will overwrite this part!!! (end)############

INCLUDES = $(all_includes)

KDE_OPTIONS = noautodist

