noinst_LIBRARIES = libnewstuff.a

libnewstuff_a_METASOURCES = AUTO

libnewstuff_a_SOURCES = manager.cpp dialog.cpp newscript.cpp providerloader.cpp

CLEANFILES = *~

EXTRA_DIST = \
manager.h manager.cpp \
dialog.h dialog.cpp \
newscript.h newscript.cpp \
providerloader.h providerloader.cpp

AM_CPPFLAGS = $(all_includes)

KDE_OPTIONS = noautodist

