AM_CPPFLAGS = $(all_includes)

noinst_LIBRARIES = librtf2html.a
librtf2html_a_SOURCES = fmt_opts.cpp rtf2html.cpp rtf_keyword.cpp rtf_table.cpp

librtf2html_a_METASOURCES = AUTO

KDE_OPTIONS = noautodist

EXTRA_DIST = common.h dbg_iter.h fmt_opts.h fmt_opts.cpp \
rtf2html.h rtf2html.cpp rtf_keyword.h rtf_keyword.cpp \
rtf_table.h rtf_table.cpp rtf_tools.h

CLEANFILES = *~

